--- a/Kolejki3/Kolejki3/Kolejki3.csproj
+++ b/Kolejki3/Kolejki3/Kolejki3.csproj
@@ -51,6 +51,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Logika\FIFO.cs" />
+    <Compile Include="Logika\Kolejka.cs" />
+    <Compile Include="Logika\Maszyna.cs" />
+    <Compile Include="Logika\Zdarzenie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -78,6 +82,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
