--- a/Kolejki3/Kolejki3/Kolejki3.csproj
+++ b/Kolejki3/Kolejki3/Kolejki3.csproj
@@ -53,7 +53,11 @@
     </Compile>
     <Compile Include="Logika\FIFO.cs" />
     <Compile Include="Logika\Kolejka.cs" />
+    <Compile Include="Logika\ListaMaszyn.cs" />
+    <Compile Include="Logika\ListaPolaczen.cs" />
     <Compile Include="Logika\Maszyna.cs" />
+    <Compile Include="Logika\Modul.cs" />
+    <Compile Include="Logika\Polaczenie.cs" />
     <Compile Include="Logika\Zdarzenie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
