--- a/Kolejki3/Kolejki3/Kolejki3.csproj
+++ b/Kolejki3/Kolejki3/Kolejki3.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="Logika\FIFO.cs" />
     <Compile Include="Logika\Kolejka.cs" />
+    <Compile Include="Logika\LIFO.cs" />
     <Compile Include="Logika\ListaMaszyn.cs" />
     <Compile Include="Logika\ListaPolaczen.cs" />
     <Compile Include="Logika\Maszyna.cs" />
